--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,11 @@ dependencies:
   flutter_map: ^7.0.2
   location: ^7.0.0
   latlong2: ^0.9.1
+  http: ^1.2.2
+  flutter_spinkit: ^5.2.1
+  image_picker: ^1.1.2
+  path: ^1.9.0
+  async: ^2.11.0
 
 dev_dependencies:
   flutter_test:
