--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,11 +26,12 @@ if (flutterVersionName == null) {
 android {
     namespace = "com.example.e_absen"
     compileSdk = flutter.compileSdkVersion
-    ndkVersion = flutter.ndkVersion
+    // ndkVersion = flutter.ndkVersion
+    ndkVersion = "27.0.12077973"
 
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_1_8
-        targetCompatibility = JavaVersion.VERSION_1_8
+        sourceCompatibility = JavaVersion.VERSION_21
+        targetCompatibility = JavaVersion.VERSION_21
     }
 
     defaultConfig {
@@ -52,8 +53,6 @@ android {
         }
     }
 }
-
-apply plugin: 'com.google.gms.google-services'
 
 flutter {
     source = "../.."
