--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   image_picker: ^1.1.2
   path: ^1.9.0
   async: ^2.11.0
+  flutter_secure_storage: ^9.2.2
 
 dev_dependencies:
   flutter_test:
